--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "fn_abi"
-version = "2.0.1"
-edition = "2018"
+version = "3.0.0"
+edition = "2021"
 authors = ["William Venner <william@venner.io>"]
 license = "MIT"
 repository = "https://github.com/WilliamVenner/fn_abi"
 description = "A proc attribute macro that sets the ABI/calling convention for the attributed function"
 categories = ["development-tools::ffi"]
 keywords = ["abi", "calling-convention", "cross-compilation", "extern", "macro"]
+
+[workspace]
+members = ["tests"]
 
 [lib]
 proc-macro = true
